[package]
name = "sunset-web-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
## Enables test-only FFI: voice_inject_pcm, voice_install_frame_recorder,
## voice_recorded_frames, voice_active_peers. Also activates
## sunset-voice/test-hooks to expose VoiceRuntime::set_frame_sink and
## snapshot_states.
test-hooks = ["sunset-voice/test-hooks"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
postcard.workspace = true
rand_chacha.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
sunset-core.workspace = true
sunset-markdown = { workspace = true, features = ["serde"] }
sunset-noise.workspace = true
sunset-store.workspace = true
sunset-store-memory.workspace = true
sunset-relay-resolver.workspace = true
sunset-sync.workspace = true
sunset-sync-webrtc-browser.workspace = true
sunset-sync-ws-browser.workspace = true
sha2.workspace = true
sunset-voice = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
web-time.workspace = true
zeroize.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.2 with the "js" feature is required for rand_core's
# "getrandom" feature to work on wasm32-unknown-unknown. (rand_core 0.6
# depends on getrandom 0.2, which needs "js" to use the browser RNG.)
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
js-sys.workspace = true
serde-wasm-bindgen = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-tracing.workspace = true
wasmtimer.workspace = true
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "BinaryType", "CloseEvent", "Event"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
